<resources>

    <!-- MainActivity -->
    <string name="app_name">ActivityResult</string>
    <string name="explorar_o_edittext">Explorar o EditText</string>
    <string name="explorar_o_textview">Explorar o textView</string>

    <!-- EditTextActivity -->
    <string name="hint_name">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_error_name">O campo nome é obrigatório</string>
    <string name="hint_error_email">Email inválido</string>
    <string name="hint_error_password">Senha inválida</string>
    <string name="msg_sucess">Usuário %1$s com email %2$s cadastrado com sucesso!</string>
    <string name="explorar_o_material">Material Designer</string>

    <!-- Components Activity -->
    <string name="text_on">Ligado</string>
    <string name="text_off">Desligado</string>
    <string name="text_enabled">Habilitado</string>
    <string name="text_disable">Desabilitado</string>
    <string name="text_option1">Opção 1</string>
    <string name="text_option2">Opção 2</string>
    <string name="text_option3">Opção 3</string>
    <string name="btn_show_values">Ver Valores</string>
    <string name="msg_result">%1$s\nProgress:%2$d\nNome:%3$s\nOpção:%4$s</string>
    <string name="o">o</string>
    <string name="components">components</string>

    <!-- ListView Adapter -->
    <string name="fuel_flex">Flex</string>
    <string name="gasoline">Gasolina</string>
    <string name="ethanol">Etanol</string>
    <string name="fuel_invalid">Invalido</string>
    <string name="custon_list_view">ListView Customizada</string>
    <string name="header_text">Carros</string>
    <string name="no_vehicles">Nenhum carro cadastrado</string>
    <string name="autocomplete_example">AutoComplete Example</string>
    <string name="recycle">RecycleView</string>
    <string name="title_message">Title</string>
    <string name="hindtextmessage">Texto</string>
    <plurals name="footer_text">
        <item quantity="one">1 carro</item>
        <item quantity="other">%d carros</item>
    </plurals>

</resources>